Modify GitHub pages domain
Now this page is served as `rack.github.io`.
* https://github.com/blog/1452-new-github-pages-domain-github-io

--- a/README.rdoc
+++ b/README.rdoc
@@ -619,7 +619,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 == Links
 
-Rack:: <http://rack.github.com/>
+Rack:: <http://rack.github.io/>
 Official Rack repositories:: <http://github.com/rack>
 Rack Bug Tracking:: <http://github.com/rack/rack/issues>
 rack-devel mailing list:: <http://groups.google.com/group/rack-devel>
