README: update to add yahns to the list of servers
yahns will eventually support more than Rack, but for now
it only knows Rack.

ref: http://yahns.yhbt.net/README
Signed-off-by: James Tucker <jftucker@gmail.com>

--- a/README.rdoc
+++ b/README.rdoc
@@ -33,6 +33,7 @@ These web servers include Rack handlers in their distributions:
 * Unicorn
 * unixrack
 * uWSGI
+* yahns
 * Zbatery
 
 Any valid Rack app will run the same on all these handlers, without
