Document the multipart_part_limit configuration in the README

--- a/README.rdoc
+++ b/README.rdoc
@@ -181,6 +181,34 @@ Installing the Ruby fcgi gem:
 Furthermore, to test Memcache sessions, you need memcached (will be
 run on port 11211) and memcache-client installed.
 
+== Configuration
+
+Several parameters can be modified on `Rack::Utils` to configure Rack behaviour.
+
+e.g:
+
+```ruby
+Rack::Utils.key_space_limit = 128
+```
+
+=== key_space_limit
+
+The default number of bytes to allow a single parameter key to take up.
+This helps prevent a rogue client from flooding a Request.
+
+Default to 65536 characters (4 kiB in worst case).
+
+=== multipart_part_limit
+
+The maximum number of parts a request can contain.
+Accepting too many part can lead to the server running out of file handles.
+
+The default is `128`, which mean that a single request can't upload more than 128 files at once.
+
+Set to `0` for not limit.
+
+Can also be set via the `RACK_MULTIPART_PART_LIMIT` environment variable.
+
 == History
 
 * March 3rd, 2007: First public release 0.1.
