--- a/README.rdoc
+++ b/README.rdoc
@@ -198,7 +198,7 @@ This helps prevent a rogue client from flooding a Request.
 
 Default to 65536 characters (4 kiB in worst case).
 
-=== multipart_part_limit
+=== multipart_limit
 
 The maximum number of parts a request can contain.
 Accepting too many part can lead to the server running out of file handles.
@@ -207,7 +207,7 @@ The default is `128`, which mean that a single request can't upload more than 12
 
 Set to `0` for not limit.
 
-Can also be set via the `RACK_MULTIPART_PART_LIMIT` environment variable.
+Can also be set via the `RACK_MULTIPART_LIMIT` environment variable.
 
 == History
 
