--- a/README.rdoc
+++ b/README.rdoc
@@ -207,7 +207,7 @@ Can also be set via the RACK_MULTIPART_PART_LIMIT environment variable.
 
 == History
 
-See <https://github.com/rack/HISTORY.md>.
+See <https://github.com/rack/rack/blob/master/HISTORY.md>.
 
 == Contact
 
