--- a/README.rdoc
+++ b/README.rdoc
@@ -200,6 +200,13 @@ Set to 0 for no limit.
 
 Can also be set via the RACK_MULTIPART_PART_LIMIT environment variable.
 
+=== trusted_proxies
+
+The trusted proxies to be used when determining the IP address of the remote client making a request.
+Client addresses which match the specified proxy addresses are discarded from the X-Forwarded-For addresses.
+
+The value provided may be a string, IPAddr or Regexp object, or an Array including any of those types of objects.
+
 == History
 
 See <https://github.com/rack/rack/blob/master/HISTORY.md>.
