Add Hanami on the list of frameworks that use Rack.

--- a/README.rdoc
+++ b/README.rdoc
@@ -41,6 +41,7 @@ These frameworks include Rack adapters in their distributions:
 * Coset
 * Espresso
 * Halcyon
+* Hanami
 * Mack
 * Maveric
 * Merb
