Add WABuR to list of frameworks

--- a/README.rdoc
+++ b/README.rdoc
@@ -54,6 +54,7 @@ These frameworks include Rack adapters in their distributions:
 * Sinatra
 * Sin
 * Vintage
+* WABuR
 * Waves
 * Wee
 * ... and many others.
