--- a/README.rdoc
+++ b/README.rdoc
@@ -208,9 +208,9 @@ Set to 0 for no limit.
 
 Can also be set via the +RACK_MULTIPART_PART_LIMIT+ environment variable.
 
-== Changelog
+== History
 
-See {CHANGELOG.md}[https://github.com/rack/rack/blob/master/CHANGELOG.md].
+See {HISTORY.md}[https://github.com/rack/rack/blob/master/HISTORY.md].
 
 == Contact
 
