Add NGINX Unit web server to list on README.md
https://unit.nginx.org/configuration/#ruby

--- a/README.rdoc
+++ b/README.rdoc
@@ -32,6 +32,7 @@ These web servers include \Rack handlers in their distributions:
 * Ebb
 * Fuzed
 * Glassfish v3
+* NGINX Unit
 * Phusion Passenger (which is mod_rack for Apache and for nginx)
 * Puma
 * Reel
