--- a/README.rdoc
+++ b/README.rdoc
@@ -19,25 +19,25 @@ which all \Rack applications should conform to.
 
 The included *handlers* connect all kinds of web servers to \Rack:
 
-* WEBrick
+* WEBrick[https://github.com/ruby/webrick]
 * FCGI
 * CGI
 * SCGI
-* LiteSpeed
-* Thin
+* LiteSpeed[https://www.litespeedtech.com/]
+* Thin[https://rubygems.org/gems/thin]
 
 These web servers include \Rack handlers in their distributions:
 
-* Agoo
-* Ebb
-* Fuzed
-* Glassfish v3
-* NGINX Unit
-* Phusion Passenger (which is mod_rack for Apache and for nginx)
-* Puma
-* Reel
-* unixrack
-* uWSGI
+* Agoo[https://github.com/ohler55/agoo]
+* Ebb[https://github.com/gnosek/ebb]
+* Fuzed[https://github.com/KirinDave/fuzed]
+* {Glassfish v3}[https://rubygems.org/gems/glassfish]
+* {NGINX Unit}[https://unit.nginx.org/]
+* {Phusion Passenger}[https://www.phusionpassenger.com/] (which is mod_rack for Apache and for nginx)
+* Puma[https://puma.io/]
+* Reel[https://github.com/celluloid/reel]
+* unixrack[https://rubygems.org/gems/unixrack]
+* uWSGI[https://uwsgi-docs.readthedocs.io/en/latest/]
 
 Any valid \Rack app will run the same on all these handlers, without
 changing anything.
@@ -46,25 +46,25 @@ changing anything.
 
 These frameworks include \Rack adapters in their distributions:
 
-* Camping
-* Coset
-* Espresso
-* Halcyon
-* Hanami
-* Mack
-* Maveric
-* Merb
-* Padrino
+* Camping[http://www.ruby-camping.com/]
+* Coset[http://leahneukirchen.org/repos/coset/]
+* Espresso[https://rubygems.org/gems/espresso-framework]
+* Halcyon[https://rubygems.org/gems/espresso-framework]
+* Hanami[https://rubygems.org/gems/halcyon]
+* Mack[https://github.com/markbates/mack]
+* Maveric[https://rubygems.org/gems/maveric]
+* Merb[https://rubygems.org/gems/merb]
+* Padrino[http://padrinorb.com/]
 * Racktools::SimpleApplication
-* Ramaze
-* Ruby on Rails
-* Rum
-* Sinatra
-* Sin
-* Vintage
-* WABuR
-* Waves
-* Wee
+* Ramaze[http://ramaze.net/]
+* {Ruby on Rails}[https://rubyonrails.org/]
+* Rum[https://github.com/leahneukirchen/rum]
+* Sinatra[http://sinatrarb.com/]
+* Sin[https://github.com/raggi/sin]
+* Vintage[https://rubygems.org/gems/vintage]
+* WABuR[https://github.com/ohler55/wabur]
+* Waves[https://github.com/dyoder/waves]
+* Wee[https://github.com/mneumann/wee]
 * ... and many others.
 
 == Available middleware
