Require the response headers be an unfrozen hash in SPEC
This is stricter than what was previously required.  However,
non-hash response headers would break most of the middleware
that accesses response headers.

Middleware in many cases adds or removes headers, so require
the hash not be frozen, so that this can be done efficiently.

Fixes #1222

--- a/SPEC.rdoc
+++ b/SPEC.rdoc
@@ -268,7 +268,7 @@ This is an HTTP status. It must be an Integer greater than or equal to
 
 === The Headers
 
-The header must respond to +each+, and yield values of key and value.
+The headers must be a unfrozen Hash.
 The header keys must be Strings.
 Special headers starting "rack." are for communicating with the
 server, and must not be sent back to the client.
